lintian (2.5.20) UNRELEASED; urgency=low

  XXX: generate tag summary with private/generate-tag-summary

  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of poppler/xpdf.  (Closes: #724733)

 -- Niels Thykier <niels@thykier.net>  Thu, 26 Sep 2013 09:35:27 +0200

lintian (2.5.19) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - homepage-in-binary-package

  * checks/fields.{desc,pm}:
    + [NT] Add check for "Homepage"-field missing in the
      source, when one of the binary packages has the
      field.  Thanks to Ricardo Mones for the bug report.
      (Closes: #693117)
  * checks/files.pm:
    + [NT] Apply patch from Samuel Thibault to fix a
      false-positive non-standard-toplevel-dir for the
      directories /hurd and /servers.  (Closes: #724524)
    + [NT] Work around bug #724571 in t1disasm by ignoring
      failures caused by segementation faults and bus errors.
      Though, Lintian will emit a warning when such an error
      occurs.  Thanks to Ansgar Burchardt for the report.
      (Closes: #724319)
  * checks/testsuite.pm:
    + [NT] Allow uppercase letters in the names of DEP-8
      tests, now that the DEP-8 officially "tolerates" them.
      (see #711844)

  * lib/Lintian/Util.pm:
    + [NT] Add drain_pipe(FD).

  * reporting/{config,harness}:
    + [NT] Determine the html_reports command automatically
      instead of allowing it to be configurable.
    + [NT] Stop allowing config script to name individual
      log files.  The directory in which they are put is still
      configurable.
    + [NT] Replace LINTIAN_CFG with passing "--no-cfg" to
      lintian.
    + [NT] Replace $lintian_cmd config option with a
      @EXTRA_LINTIAN_OPTIONS.  Also stop forking a shell to
      run lintian.
    + [NT] Remove LINTIAN_BIN_DIR; it is no longer used to
      avoid signature checking.
    + [NT] Fix a bug where harness would not remove entries in
      the Lintian log for removed packages if no packages were