@@ -1,0 +1,5 @@
+Testname: cruft-nvidia-intellectual
+Sequence: 6000
+Version: 1.0
+Description: Check for the Nvidia intellectual license
+Test-For: license-problem-nvidia-intellectual
