@@ -1,0 +1,2 @@
+E: cruft-nvidia-intellectual source: license-problem-nvidia-intellectual src/badcv.c
+E: cruft-nvidia-intellectual source: license-problem-nvidia-intellectual src/badcv2.c
